name:                marktime
version:             0.0.0.0
synopsis:            Task based time tracking
description:         Please see README.md
homepage:            https://github.com/taksuyu/marktime#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Borden
maintainer:          michael@quiet.space
copyright:           2016 Michael Borden
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
                     , monad-logger
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , text
                     , time
                     , transformers

  exposed-modules:     Marktime.Common
                     , Marktime.Database

  -- other-modules: 
  
executable marktime
  hs-source-dirs:      marktime
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
  build-depends:       base
                     , ansi-wl-pprint
                     , marktime
                     , optparse-applicative
                     , optparse-text
                     , persistent-sqlite
                     , text

  other-modules:       Output
                     , Parser
